Submitted seven solutions Edited style.css in flex/01-flex-center, per the README requirements. Edited style.css in flex/02-flex-header, per the README requirements. Edited index.html and style.css in flex/03-flex-header-2, per the README requirements. Edited index.html and style.css in flex/04-flex-information, per the README requirements. Edited index.html and style.css in flex/05-flex-modal, per the README requirements. Edited style.css in flex/06-flex-layout, per the README requirements. Edited index.html and style.css in flex/07-flex-layout-2, per the README requirements.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,47 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 16px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a, a:visited {
+  color: rgb(122, 122, 122);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+button {
+  padding: 8px;
 }
 
 img {
