--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,29 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.flex-right-of-icon {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.flex-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .icon {
